fixing wraping of text in leaderboard file

--- a/html_css_content/global.css
+++ b/html_css_content/global.css
@@ -38,7 +38,7 @@ form {
   position: absolute;
   top: 80px;
   left: 50%;
-  transform: translateX(-50%); /* Centers horizontally */
+  transform: translateX(-50%);
 }
 
 #leaderboard_data{
@@ -111,12 +111,8 @@ ul li a:hover {
   background-color: #111111;
   color: rgb(177, 177, 177);
 }
-/* Top Menu Bar section */
 
-.table.table-dark.table-striped {
-    width: 90%;
-}
-
+/* footer section */
 footer {
   flex: 0 30px;
   background-color: #212121;
