--- a/html_css_content/leaderboard.css
+++ b/html_css_content/leaderboard.css
@@ -6,7 +6,8 @@ h1 {
   position: absolute;
   top: 200px;
   left: 50%;
-  transform: translateX(-50%); /* Centers horizontally */
+  transform: translateX(-50%);
+  white-space: nowrap;
 }
 
 .table.table-dark.table-striped {
